(FIX) manual => when:manual

--- a/pipelines/templates/quality-template.yml
+++ b/pipelines/templates/quality-template.yml
@@ -1,6 +1,6 @@
 .on-manual-trigger:
   rules:
-    - if: $CI_PIPELINE_SOURCE == "web"
+    - when: manual
 
 static-typing-job:
   extends: .on-manual-trigger
