--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
-    "test-report": "vitest --reporter junit --outputFile ./report.xml"
+    "test-report": "vitest --reporter junit --outputFile ./report.xml",
+    "install": "vercel"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.1",
