--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:fix": "eslint . --fix",
     "test": "vitest",
     "test-report": "vitest --reporter junit --outputFile ./report.xml",
-    "install": "vercel"
+    "install": "vercel --prod"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.1",
