--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,5 +34,4 @@ deploy-prod:
   rules:
     - when: manual
   script:
-    - pnpm add -g vercel
-    - vercel deploy --prebuilt
+    - npx vercel deploy --prebuilt
