--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,4 +34,4 @@ deploy-prod:
   rules:
     - when: manual
   script:
-    - npx vercel deploy --prebuilt
+    - npx vercel deploy --prebuilt --token $VERCEL_TOKEN
