--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,4 +34,5 @@ deploy-prod:
   rules:
     - when: manual
   script:
-    - npx vercel deploy --prebuilt --token="$VERCEL_TOKEN"
+    - echo "VERCEL_TOKEN is set to: ${#VERCEL_TOKEN} characters"
+    - npx vercel deploy --prebuilt --token= $VERCEL_TOKEN
