--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,22 @@ build-package:
     paths:
       - dist/
 
+deploy-staging:
+  stage: deploy
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  script:
+    - npm install --global vercel
+    - vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+    - vercel deploy --prebuilt --token=$VERCEL_TOKEN
+
 deploy-prod:
   stage: deploy
   rules:
     - when: manual
+  only:
+    - main
   script:
-    - npx vercel deploy --prebuilt --token $VERCEL_TOKEN
+    - npm install --global vercel
+    - vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+    - vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
