fix(pipeline) : i hope  this is the last one

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ deploy-staging:
   script:
     - npm install --global vercel
     - vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+    - vercel build
     - vercel deploy --prebuilt --token=$VERCEL_TOKEN
 
 deploy-prod:
@@ -48,4 +49,5 @@ deploy-prod:
   script:
     - npm install --global vercel
     - vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+    - vercel build
     - vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
