--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,17 +37,13 @@ deploy-staging:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
   script:
     - npm install --global vercel
-    - vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
-    - vercel build
-    - vercel deploy --prebuilt --token=$VERCEL_TOKEN
+    - vercel deploy --prebuilt --cwd=dist --token=$VERCEL_TOKEN
 
 deploy-prod:
   stage: deploy
   rules:
       - when: manual
   script:
-    - npm install --global vercel
-    - vercel pull --yes --environment=production --token=$VERCEL_TOKEN
-    - vercel build --prod --token=$VERCEL_TOKEN  
-    - vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
+    - npm install --global vercel 
+    - vercel deploy --prebuilt --cwd=dist --prod --token=$VERCEL_TOKEN
 
