--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,9 @@ default:
 # build 
 build-package:
   stage: build
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"  
+    - if: $CI_COMMIT_BRANCH 
   cache:
     <<: *global_cache
     policy: pull-push
