--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 stages:
   - build
-  - deploy
+  - prod
+  - qa
+  
 
 default:
   image: node:latest
@@ -17,14 +19,9 @@ default:
     - corepack prepare pnpm@latest-10 --activate
     - pnpm config set store-dir .pnpm-store
     - pnpm install
-    - npm install --global vercel
 
-# build 
 build-package:
   stage: build
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"  
-    - if: $CI_COMMIT_BRANCH 
   cache:
     <<: *global_cache
     policy: pull-push
@@ -34,18 +31,14 @@ build-package:
     paths:
       - dist/
 
-# deploy
-deploy-staging:
-  stage: deploy
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-  script:
-    - vercel deploy --cwd dist/ --token=$VERCEL_TOKEN --yes
-
 deploy-prod:
-  stage: deploy
-  rules:
-      - when: manual
+  stage: prod
   script:
-    - vercel deploy --cwd=dist --prod --token=$VERCEL_TOKEN --yes
+    - swa deploy ./dist --env production
+
+deploy-qa:
+  stage: qa
+  script:
+    - swa deploy ./dist --env qa
+
 
