--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,4 +40,4 @@ QA-deploy:
   script:
     - npm install -g @azure/static-web-apps-cli
     - echo $AZURE_QA_TOKEN
-    - swa deploy ./dist --env=production --deployment-token $SWA_QA_TOKEN
+    - swa deploy ./dist --env=preview --deployment-token $SWA_QA_TOKEN
