--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,11 +33,12 @@ prod-deploy:
   stage: production
   script:
     - npm install -g @azure/static-web-apps-cli
+    - echo$SWA_PROD_TOKEN
     - swa deploy ./dist --env=production --deployment-token $SWA_PROD_TOKEN
 
 QA-deploy:
   stage: qa
   script:
     - npm install -g @azure/static-web-apps-cli
-    - echo $AZURE_QA_TOKEN
+    - echo $SWA_QA_TOKEN
     - swa deploy ./dist --env=preview --deployment-token $SWA_QA_TOKEN
