--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ prod-deploy:
     - npm install -g @azure/static-web-apps-cli
     - echo $SWA_PROD_TOKEN
     - swa deploy ./dist --env=production --deployment-token $SWA_PROD_TOKEN
+  environnement: production
 
 QA-deploy:
   stage: qa
